<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".GameRules">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:textSize="50sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/rule1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_1"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/rule2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_2"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/rule3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_3"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/rule4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_4"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:onClick="game"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:text="@string/see_latest_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:onClick="seeScore"/>

</LinearLayout>